--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Welcome to TypeScript World!</h1>
-    <script src="ts/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
